# miaosic

./: .gitignore  AGENTS.md  README.md  pubspec.yaml  release.sh
lib/: album_playback_artwork.dart  album_playback_background.dart  album_playback_dock.dart  album_playback_view.dart  album_track_list.dart  album_views.dart  app.dart  artwork_resolver.dart  audio_output_settings.dart  cover_cache.dart  favorite_views.dart  flac_metadata.dart  library_controller.dart  library_database.dart  library_diff.dart  library_formatters.dart  library_screen.dart  library_screen_actions.dart  library_screen_dialogs.dart  library_screen_models.dart  library_screen_selectors.dart  library_screen_view.dart  library_sidebar.dart  library_types.dart  library_widgets.dart  llm_settings.dart  main.dart  models.dart  music_scanner.dart  playback_controller.dart  playlist_cover_indexer.dart  playlist_playback_view.dart  playlist_views.dart  rescan_dialog.dart  rust_audio_player.dart  rust_library.dart  rust_music_scanner.dart  settings_dialog.dart  track_views.dart
linux/: CMakeLists.txt
native/music_core/: Cargo.toml
native/music_core/src/: lib.rs  playback.rs
test/: album_playback_view_test.dart  album_views_test.dart  artwork_resolver_test.dart  audio_output_settings_test.dart  cover_cache_test.dart  favorite_views_test.dart  library_controller_test.dart  library_database_test.dart  library_diff_test.dart  library_screen_selectors_test.dart  library_screen_test.dart  library_sidebar_test.dart  music_model_test.dart  playback_controller_test.dart  playlist_playback_view_test.dart  (+6 more)
(+17 files in other folders)
