[package]
name = "music_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "music_core"
crate-type = ["cdylib"]

[dependencies]
cpal = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha1 = "0.10"
hex = "0.4"
symphonia = { version = "0.6", default-features = false, features = ["flac", "ogg", "pcm", "wav"] }
